--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
             <div class="container">
                 <h3>Taurus Team - Nuestra Tienda</h3>
                 <p>Visita nuestra tienda "Taurus Team" en linea Escribiendo al siguiente numero</p>
-                <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
+                 <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261" target="_blank">Enviar Mensaje por WhatsApp</a></p>
                 <ul>
                     <li>Equipo de protección personal (orejeras, gafas de seguridad)</li>
                     <li>Accesorios para armas</li>
@@ -194,13 +195,14 @@
                 <h3>Contáctanos</h3>
                 <p>¿Tienes preguntas o quieres reservar tu sesión?</p>
                 <div class="contact-info">
-                    <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
-                    <p><strong>Horario de Atención:</strong> De 09:00 AM a 04:00 PM</p>
-                    <p><strong>Dirección:</strong> Parque de Píntag, Quito, Pichincha, Ecuador.</p>
-                    <div class="map-embed">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.845347209706!2d-78.36104442596894!3d-0.34700079965415754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59680387e35b1%3A0xc367ce7b433f0011!2sParque%20Central%20De%20P%C3%ADntag!5e0!3m2!1ses!2sec!4v1701389814512!5m2!1ses!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261" target="_blank">Enviar Mensaje por WhatsApp</a></p>
+                <p><strong>Horario de Atención:</strong> De 09:00 AM a 04:00 PM</p>
+                <p><strong>Dirección:</strong> Parque de Píntag, Quito, Pichincha, Ecuador.</p>
+                <div class="map-embed">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.845347209706!2d-78.36104442596894!3d-0.34700079965415754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59680387e35b1%3A0xc367ce7b433f0011!2sParque%20Central%20De%20P%C3%ADntag!5e0!3m2!1ses!2sec!4v1701389814512!5m2!1ses!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </div>
+            </div>
                 </div>
         </section>
     </main>
