--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <div class="container">
                 <h2>Tu Destino para la Seguridad y el Perfeccionamiento en el Tiro</h2>
                 <p>Abierto para expertos y principiantes. ¡Descubre tu potencial con nosotros!</p>
+                <p>WhatsApp:</p>
+                <p><strong></strong> <a href="https://wa.me/593983868261?text=Hola,%20quiero%20mas%20informacion%20sobre%20el%20poligono." target="_blank" class="whatsapp-link">Enviar Mensaje por WhatsApp</a></p>
                 <a href="#servicios" class="btn">Explorar Servicios</a>
             </div>
         </section>
@@ -172,7 +174,7 @@
                 <h3>Taurus Team - Nuestra Tienda</h3>
                 <p>Visita nuestra tienda "Taurus Team" en linea Escribiendo al siguiente numero</p>
                  <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
-                <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261" target="_blank">Enviar Mensaje por WhatsApp</a></p>
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261?text=Hola,%20quiero%20mas%20informacion%20sobre%20los%20accesorios%20disponibles." target="_blank" class="whatsapp-link">Enviar Mensaje por WhatsApp</a></p>
                 <ul>
                     <li>Equipo de protección personal (orejeras, gafas de seguridad)</li>
                     <li>Accesorios para armas</li>
@@ -196,7 +198,7 @@
                 <p>¿Tienes preguntas o quieres reservar tu sesión?</p>
                 <div class="contact-info">
                 <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
-                <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261" target="_blank">Enviar Mensaje por WhatsApp</a></p>
+                 <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261?text=Hola,%20quiero%20mas%20informacion%20sobre%20el%20poligono." target="_blank" class="whatsapp-link">Enviar Mensaje por WhatsApp</a></p>
                 <p><strong>Horario de Atención:</strong> De 09:00 AM a 04:00 PM</p>
                 <p><strong>Dirección:</strong> Parque de Píntag, Quito, Pichincha, Ecuador.</p>
                 <div class="map-embed">
