--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <div class="container">
                 <h2>Tu Destino para la Seguridad y el Perfeccionamiento en el Tiro</h2>
                 <p>Abierto para expertos y principiantes. ¡Descubre tu potencial con nosotros!</p>
+                <p>WhatsApp:</p>
+                <p><strong></strong> <a href="https://wa.me/593983868261?text=Hola,%20quiero%20mas%20informacion%20sobre%20el%20poligono." target="_blank" class="whatsapp-link">Enviar Mensaje por WhatsApp</a></p>
                 <a href="#servicios" class="btn">Explorar Servicios</a>
             </div>
         </section>
@@ -170,8 +172,9 @@
         <section id="tienda" class="section-padded bg-light">
             <div class="container">
                 <h3>Taurus Team - Nuestra Tienda</h3>
-                <p>Visita nuestra tienda "Taurus Team" </p>
-                <p><strong>Enlace a nuestra tienda en linea: </strong> <a href="https://taurusteam.netlify.app/" target="_blank" class="whatsapp-link">Taurus Team</a></p>
+                <p>Visita nuestra tienda "Taurus Team" en linea Escribiendo al siguiente numero</p>
+                 <p><strong>Teléfono:</strong> <a href="tel:+593983868261">0983868261</a></p>
+                <p><strong>WhatsApp:</strong> <a href="https://wa.me/593983868261?text=Hola,%20quiero%20mas%20informacion%20sobre%20los%20accesorios%20disponibles." target="_blank" class="whatsapp-link">Enviar Mensaje por WhatsApp</a></p>
                 <ul>
                     <li>Equipo de protección personal (orejeras, gafas de seguridad)</li>
                     <li>Accesorios para armas</li>
@@ -213,10 +216,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/593983868261" target="_blank" class="whatsapp-float">
-        <img src="images/Logo Whatsapp.jpeg" alt="WhatsApp">
-    </a>
-
 </body>
 </html>
+
 
